PyV2/PythonParser.g4
/*
Python grammar
The MIT License (MIT)
Copyright (c) 2021 Robert Einhorn

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
 */

 /*
  * Project      : an ANTLR4 parser grammar by the official Python 2.7.18 grammar
  *                https://github.com/RobEin/ANTLR4-parser-for-Python-2.7.18
  * Developed by : Robert Einhorn
  */

// https://docs.python.org/2.7/reference/grammar.html
parser grammar PythonParser;

@header {
    import java.util.*;
}

@members {
       //Tabla de simbolos: nombre -> [linea, conteo de llamadas]
       Map<String, int[]> methodTable = new LinkedHashMap<>();

       // Registrar declaración de función/metodo
       void declareMethod(String name, int line) {
           if (!methodTable.containsKey(name)) {
               methodTable.put(name, new int[]{line, 0});
           }
       }

       // Registrar llamada a función/metodo
       void callMethod(String name) {
           if (methodTable.containsKey(name)) {
               methodTable.get(name)[1]++;
           }
       }

       // Generar reporte
       void printReport() {
           System.out.println("===== REPORTE DE FUNCIONES/METODOS =====");
           for (Map.Entry<String, int[]> entry : methodTable.entrySet()) {
               String name = entry.getKey();
               int line = entry.getValue()[0];
               int count = entry.getValue()[1];
               if (count == 0) {
                   System.out.println("Funcion '" + name + "' (linea " + line + ") no fue llamada. OPTIMIZABLE.");
               } else if (count == 1) {
                   if (name.equals("main")) {
                       System.out.println("Funcion 'main' (linea " + line + ") llamada SOLO 1 vez. (Punto de entrada)");
                   } else {
                       System.out.println("Funcion '" + name + "' (linea " + line + ") llamada SOLO 1 vez. OPTIMIZABLE.");
                   }
               } else {
                   System.out.println("Funcion '" + name + "' (linea " + line + ") llamada " + count + " veces.");
               }
           }
       }
}

options { tokenVocab=PythonLexer; }

// ANTLR4 grammar for Python

// Start symbols for the grammar:
//       single_input is a single interactive statement;
//       file_input is a module or sequence of commands read from an input file;
//       eval_input is the input for the eval() and input() functions.
// NB: compound_stmt in single_input is followed by extra NEWLINE!
single_input: NEWLINE | simple_stmt | compound_stmt NEWLINE;

//Al finalizar el análisis, se genera el reporte
file_input: (NEWLINE | stmt)* EOF
    {
        printReport();
    }
;
eval_input: testlist NEWLINE* EOF;

decorator: '@' dotted_name ( '(' arglist? ')' )? NEWLINE;
decorators: decorator+;
decorated: decorators (classdef | funcdef);

// === DEFINICIÓN DE FUNCIÓN/MÉTODO ===
//Cada vez que se declara una función, se registra su nombre y linea.
funcdef: 'def' NAME parameters ':' suite
    {
        declareMethod($NAME.text, $NAME.getLine());
    }
; 

parameters: '(' varargslist? ')';
varargslist: ((fpdef ('=' test)? ',')*
              ('*' NAME (',' '**' NAME)? | '**' NAME) |
              fpdef ('=' test)? (',' fpdef ('=' test)?)* ','?);
fpdef: NAME | '(' fplist ')';
fplist: fpdef (',' fpdef)* ','?;

stmt: simple_stmt | compound_stmt;
simple_stmt: small_stmt (';' small_stmt)* ';'? NEWLINE;
small_stmt: (expr_stmt | print_stmt  | del_stmt | pass_stmt | flow_stmt |
             import_stmt | global_stmt | exec_stmt | assert_stmt);
expr_stmt: testlist (augassign (yield_expr|testlist) |
                     ('=' (yield_expr|testlist))*);
augassign: ('+=' | '-=' | '*=' | '/=' | '%=' | '&=' | '|=' | '^=' |
            '<<=' | '>>=' | '**=' | '//=');
// For normal assignments, additional restrictions enforced by the interpreter
print_stmt: 'print' ( ( test (',' test)* ','? )? |
                      '>>' test ( (',' test)+ ','? )? );
del_stmt: 'del' exprlist;
pass_stmt: 'pass';
flow_stmt: break_stmt | continue_stmt | return_stmt | raise_stmt | yield_stmt;
break_stmt: 'break';
continue_stmt: 'continue';
return_stmt: 'return' testlist?;
yield_stmt: yield_expr;
raise_stmt: 'raise' (test (',' test (',' test)?)?)?;
import_stmt: import_name | import_from;
import_name: 'import' dotted_as_names;
import_from: ('from' ('.'* dotted_name | '.'+)
              'import' ('*' | '(' import_as_names ')' | import_as_names));
import_as_name: NAME ('as' NAME)?;
dotted_as_name: dotted_name ('as' NAME)?;
import_as_names: import_as_name (',' import_as_name)* ','?;
dotted_as_names: dotted_as_name (',' dotted_as_name)*;
dotted_name: NAME ('.' NAME)*;
global_stmt: 'global' NAME (',' NAME)*;
exec_stmt: 'exec' expr ('in' test (',' test)?)?;
assert_stmt: 'assert' test (',' test)?;

compound_stmt: if_stmt | while_stmt | for_stmt | try_stmt | with_stmt | funcdef | classdef | decorated;
if_stmt: 'if' test ':' suite ('elif' test ':' suite)* ('else' ':' suite)?;
while_stmt: 'while' test ':' suite ('else' ':' suite)?;
for_stmt: 'for' exprlist 'in' testlist ':' suite ('else' ':' suite)?;
try_stmt: ('try' ':' suite
           ((except_clause ':' suite)+
            ('else' ':' suite)?
            ('finally' ':' suite)? |
           'finally' ':' suite));
with_stmt: 'with' with_item (',' with_item)*  ':' suite;
with_item: test ('as' expr)?;
// NB compile.c makes sure that the default except clause is last
except_clause: 'except' (test (('as' | ',') test)?)?;
suite: simple_stmt | NEWLINE INDENT stmt+ DEDENT;

// Backward compatibility cruft to support:
// [ x for x in lambda: True, lambda: False if x() ]
// even while also allowing:
// lambda x: 5 if x else 2
// (But not a mix of the two)
testlist_safe: old_test ((',' old_test)+ ','?)?;
old_test: or_test | old_lambdef;
old_lambdef: 'lambda' varargslist? ':' old_test;

test: or_test ('if' or_test 'else' test)? | lambdef;
or_test: and_test ('or' and_test)*;
and_test: not_test ('and' not_test)*;
not_test: 'not' not_test | comparison;
comparison: expr (comp_op expr)*;
comp_op: '<'|'>'|'=='|'>='|'<='|'<>'|'!='|'in'|'not' 'in'|'is'|'is' 'not';
expr: xor_expr ('|' xor_expr)*;
xor_expr: and_expr ('^' and_expr)*;
and_expr: shift_expr ('&' shift_expr)*;
shift_expr: arith_expr (('<<'|'>>') arith_expr)*;
arith_expr: term (('+'|'-') term)*;
term: factor (('*'|'/'|'%'|'//') factor)*;
factor: ('+'|'-'|'~') factor | power;

// === LLAMADA A FUNCIÓN/MÉTODO ===
//Esto registra la llamada cada vez que se detecta la sintaxis de llamada a función.
power
    : name=NAME trailer_call
      {
          callMethod($name.text);
      }
    | atom trailer* ('**' factor)?
    ;

trailer_call
    : '(' arglist? ')'
    ;


atom: ('(' (yield_expr|testlist_comp)? ')' |
       '[' listmaker? ']' |
       '{' dictorsetmaker? '}' |
       '`' testlist1 '`' |
       NAME | NUMBER | STRING+);
listmaker: test ( list_for | (',' test)* ','? );
testlist_comp: test ( comp_for | (',' test)* ','? );
lambdef: 'lambda' varargslist? ':' test;
trailer: '(' arglist? ')' | '[' subscriptlist ']' | '.' NAME;
subscriptlist: subscript (',' subscript)* ','?;
subscript: '.' '.' '.' | test | test? ':' test? sliceop?;
sliceop: ':' test?;
exprlist: expr (',' expr)* ','?;
testlist: test (',' test)* ','?;
dictorsetmaker: ( (test ':' test (comp_for | (',' test ':' test)* ','?)) |
                  (test (comp_for | (',' test)* ','?)) );

classdef: 'class' NAME ('(' testlist? ')')? ':' suite;

arglist: (argument ',')* (argument ','?
                         |'*' test (',' argument)* (',' '**' test)?
                         |'**' test);
// The reason that keywords are test nodes instead of NAME is that using NAME
// results in an ambiguity. ast.c makes sure it's a NAME.
argument: test comp_for? | test '=' test;

list_iter: list_for | list_if;
list_for: 'for' exprlist 'in' testlist_safe list_iter?;
list_if: 'if' old_test list_iter?;

comp_iter: comp_for | comp_if;
comp_for: 'for' exprlist 'in' or_test comp_iter?;
comp_if: 'if' old_test comp_iter?;

testlist1: test (',' test)*;

// not used in grammar, but may appear in "node" passed from Parser to Compiler
encoding_decl: NAME;

yield_expr: 'yield' testlist?;
