PyV2/PythonParser.java
// Generated from PythonParser.g4 by ANTLR 4.13.2

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, LPAR=3, LSQB=4, LBRACE=5, RPAR=6, RSQB=7, RBRACE=8, 
		COLON=9, COMMA=10, SEMI=11, PLUS=12, MINUS=13, STAR=14, SLASH=15, VBAR=16, 
		AMPER=17, LESS=18, GREATER=19, EQUAL=20, DOT=21, PERCENT=22, BACKQUOTE=23, 
		EQEQUAL=24, INEQUAL=25, NOTEQUAL=26, LESSEQUAL=27, GREATEREQUAL=28, TILDE=29, 
		CIRCUMFLEX=30, LEFTSHIFT=31, RIGHTSHIFT=32, DOUBLESTAR=33, PLUSEQUAL=34, 
		MINEQUAL=35, STAREQUAL=36, SLASHEQUAL=37, PERCENTEQUAL=38, AMPEREQUAL=39, 
		VBAREQUAL=40, CIRCUMFLEXEQUAL=41, LEFTSHIFTEQUAL=42, RIGHTSHIFTEQUAL=43, 
		DOUBLESTAREQUAL=44, DOUBLESLASH=45, DOUBLESLASHEQUAL=46, AT=47, AND=48, 
		AS=49, ASSERT=50, BREAK=51, CLASS=52, CONTINUE=53, DEF=54, DEL=55, ELIF=56, 
		ELSE=57, EXCEPT=58, EXEC=59, FINALLY=60, FOR=61, FROM=62, GLOBAL=63, IF=64, 
		IMPORT=65, IN=66, IS=67, LAMBDA=68, NOT=69, OR=70, PASS=71, PRINT=72, 
		RAISE=73, RETURN=74, TRY=75, WHILE=76, WITH=77, YIELD=78, NAME=79, NUMBER=80, 
		STRING=81, NEWLINE=82, COMMENT=83, WS=84, EXPLICIT_LINE_JOINING=85, ERRORTOKEN=86;
	public static final int
		RULE_single_input = 0, RULE_file_input = 1, RULE_eval_input = 2, RULE_decorator = 3, 
		RULE_decorators = 4, RULE_decorated = 5, RULE_funcdef = 6, RULE_parameters = 7, 
		RULE_varargslist = 8, RULE_fpdef = 9, RULE_fplist = 10, RULE_stmt = 11, 
		RULE_simple_stmt = 12, RULE_small_stmt = 13, RULE_expr_stmt = 14, RULE_augassign = 15, 
		RULE_print_stmt = 16, RULE_del_stmt = 17, RULE_pass_stmt = 18, RULE_flow_stmt = 19, 
		RULE_break_stmt = 20, RULE_continue_stmt = 21, RULE_return_stmt = 22, 
		RULE_yield_stmt = 23, RULE_raise_stmt = 24, RULE_import_stmt = 25, RULE_import_name = 26, 
		RULE_import_from = 27, RULE_import_as_name = 28, RULE_dotted_as_name = 29, 
		RULE_import_as_names = 30, RULE_dotted_as_names = 31, RULE_dotted_name = 32, 
		RULE_global_stmt = 33, RULE_exec_stmt = 34, RULE_assert_stmt = 35, RULE_compound_stmt = 36, 
		RULE_if_stmt = 37, RULE_while_stmt = 38, RULE_for_stmt = 39, RULE_try_stmt = 40, 
		RULE_with_stmt = 41, RULE_with_item = 42, RULE_except_clause = 43, RULE_suite = 44, 
		RULE_testlist_safe = 45, RULE_old_test = 46, RULE_old_lambdef = 47, RULE_test = 48, 
		RULE_or_test = 49, RULE_and_test = 50, RULE_not_test = 51, RULE_comparison = 52, 
		RULE_comp_op = 53, RULE_expr = 54, RULE_xor_expr = 55, RULE_and_expr = 56, 
		RULE_shift_expr = 57, RULE_arith_expr = 58, RULE_term = 59, RULE_factor = 60, 
		RULE_power = 61, RULE_trailer_call = 62, RULE_atom = 63, RULE_listmaker = 64, 
		RULE_testlist_comp = 65, RULE_lambdef = 66, RULE_trailer = 67, RULE_subscriptlist = 68, 
		RULE_subscript = 69, RULE_sliceop = 70, RULE_exprlist = 71, RULE_testlist = 72, 
		RULE_dictorsetmaker = 73, RULE_classdef = 74, RULE_arglist = 75, RULE_argument = 76, 
		RULE_list_iter = 77, RULE_list_for = 78, RULE_list_if = 79, RULE_comp_iter = 80, 
		RULE_comp_for = 81, RULE_comp_if = 82, RULE_testlist1 = 83, RULE_encoding_decl = 84, 
		RULE_yield_expr = 85;
	private static String[] makeRuleNames() {
		return new String[] {
			"single_input", "file_input", "eval_input", "decorator", "decorators", 
			"decorated", "funcdef", "parameters", "varargslist", "fpdef", "fplist", 
			"stmt", "simple_stmt", "small_stmt", "expr_stmt", "augassign", "print_stmt", 
			"del_stmt", "pass_stmt", "flow_stmt", "break_stmt", "continue_stmt", 
			"return_stmt", "yield_stmt", "raise_stmt", "import_stmt", "import_name", 
			"import_from", "import_as_name", "dotted_as_name", "import_as_names", 
			"dotted_as_names", "dotted_name", "global_stmt", "exec_stmt", "assert_stmt", 
			"compound_stmt", "if_stmt", "while_stmt", "for_stmt", "try_stmt", "with_stmt", 
			"with_item", "except_clause", "suite", "testlist_safe", "old_test", "old_lambdef", 
			"test", "or_test", "and_test", "not_test", "comparison", "comp_op", "expr", 
			"xor_expr", "and_expr", "shift_expr", "arith_expr", "term", "factor", 
			"power", "trailer_call", "atom", "listmaker", "testlist_comp", "lambdef", 
			"trailer", "subscriptlist", "subscript", "sliceop", "exprlist", "testlist", 
			"dictorsetmaker", "classdef", "arglist", "argument", "list_iter", "list_for", 
			"list_if", "comp_iter", "comp_for", "comp_if", "testlist1", "encoding_decl", 
			"yield_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "'['", "'{'", "')'", "']'", "'}'", "':'", "','", 
			"';'", "'+'", "'-'", "'*'", "'/'", "'|'", "'&'", "'<'", "'>'", "'='", 
			"'.'", "'%'", "'`'", "'=='", "'<>'", "'!='", "'<='", "'>='", "'~'", "'^'", 
			"'<<'", "'>>'", "'**'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
			"'|='", "'^='", "'<<='", "'>>='", "'**='", "'//'", "'//='", "'@'", "'and'", 
			"'as'", "'assert'", "'break'", "'class'", "'continue'", "'def'", "'del'", 
			"'elif'", "'else'", "'except'", "'exec'", "'finally'", "'for'", "'from'", 
			"'global'", "'if'", "'import'", "'in'", "'is'", "'lambda'", "'not'", 
			"'or'", "'pass'", "'print'", "'raise'", "'return'", "'try'", "'while'", 
			"'with'", "'yield'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "LPAR", "LSQB", "LBRACE", "RPAR", "RSQB", "RBRACE", 
			"COLON", "COMMA", "SEMI", "PLUS", "MINUS", "STAR", "SLASH", "VBAR", "AMPER", 
			"LESS", "GREATER", "EQUAL", "DOT", "PERCENT", "BACKQUOTE", "EQEQUAL", 
			"INEQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "TILDE", "CIRCUMFLEX", 
			"LEFTSHIFT", "RIGHTSHIFT", "DOUBLESTAR", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", 
			"SLASHEQUAL", "PERCENTEQUAL", "AMPEREQUAL", "VBAREQUAL", "CIRCUMFLEXEQUAL", 
			"LEFTSHIFTEQUAL", "RIGHTSHIFTEQUAL", "DOUBLESTAREQUAL", "DOUBLESLASH", 
			"DOUBLESLASHEQUAL", "AT", "AND", "AS", "ASSERT", "BREAK", "CLASS", "CONTINUE", 
			"DEF", "DEL", "ELIF", "ELSE", "EXCEPT", "EXEC", "FINALLY", "FOR", "FROM", 
			"GLOBAL", "IF", "IMPORT", "IN", "IS", "LAMBDA", "NOT", "OR", "PASS", 
			"PRINT", "RAISE", "RETURN", "TRY", "WHILE", "WITH", "YIELD", "NAME", 
			"NUMBER", "STRING", "NEWLINE", "COMMENT", "WS", "EXPLICIT_LINE_JOINING", 
			"ERRORTOKEN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	       //Tabla de simbolos: nombre -> [linea, conteo de llamadas]
	       Map<String, int[]> methodTable = new LinkedHashMap<>();

	       // Registrar declaración de función/metodo
	       void declareMethod(String name, int line) {
	           if (!methodTable.containsKey(name)) {
	               methodTable.put(name, new int[]{line, 0});
	           }
	       }

	       // Registrar llamada a función/metodo
	       void callMethod(String name) {
	           if (methodTable.containsKey(name)) {
	               methodTable.get(name)[1]++;
	           }
	       }

	       // Generar reporte
	       void printReport() {
	           System.out.println("===== REPORTE DE FUNCIONES/METODOS =====");
	           for (Map.Entry<String, int[]> entry : methodTable.entrySet()) {
	               String name = entry.getKey();
	               int line = entry.getValue()[0];
	               int count = entry.getValue()[1];
	               if (count == 0) {
	                   System.out.println("Funcion '" + name + "' (linea " + line + ") no fue llamada. OPTIMIZABLE.");
	               } else if (count == 1) {
	                   if (name.equals("main")) {
	                       System.out.println("Funcion 'main' (linea " + line + ") llamada SOLO 1 vez. (Punto de entrada)");
	                   } else {
	                       System.out.println("Funcion '" + name + "' (linea " + line + ") llamada SOLO 1 vez. OPTIMIZABLE.");
	                   }
	               } else {
	                   System.out.println("Funcion '" + name + "' (linea " + line + ") llamada " + count + " veces.");
	               }
	           }
	       }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_inputContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public Single_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSingle_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSingle_input(this);
		}
	}

	public final Single_inputContext single_input() throws RecognitionException {
		Single_inputContext _localctx = new Single_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_single_input);
		try {
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEWLINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				match(NEWLINE);
				}
				break;
			case LPAR:
			case LSQB:
			case LBRACE:
			case PLUS:
			case MINUS:
			case BACKQUOTE:
			case TILDE:
			case ASSERT:
			case BREAK:
			case CONTINUE:
			case DEL:
			case EXEC:
			case FROM:
			case GLOBAL:
			case IMPORT:
			case LAMBDA:
			case NOT:
			case PASS:
			case PRINT:
			case RAISE:
			case RETURN:
			case YIELD:
			case NAME:
			case NUMBER:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				simple_stmt();
				}
				break;
			case AT:
			case CLASS:
			case DEF:
			case FOR:
			case IF:
			case TRY:
			case WHILE:
			case WITH:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				compound_stmt();
				setState(175);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonParser.NEWLINE, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitFile_input(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -1658309824745557960L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 524211L) != 0)) {
				{
				setState(181);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(179);
					match(NEWLINE);
					}
					break;
				case LPAR:
				case LSQB:
				case LBRACE:
				case PLUS:
				case MINUS:
				case BACKQUOTE:
				case TILDE:
				case AT:
				case ASSERT:
				case BREAK:
				case CLASS:
				case CONTINUE:
				case DEF:
				case DEL:
				case EXEC:
				case FOR:
				case FROM:
				case GLOBAL:
				case IF:
				case IMPORT:
				case LAMBDA:
				case NOT:
				case PASS:
				case PRINT:
				case RAISE:
				case RETURN:
				case TRY:
				case WHILE:
				case WITH:
				case YIELD:
				case NAME:
				case NUMBER:
				case STRING:
					{
					setState(180);
					stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			match(EOF);

			        printReport();
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Eval_inputContext extends ParserRuleContext {
		public TestlistContext testlist() {
			return getRuleContext(TestlistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonParser.NEWLINE, i);
		}
		public Eval_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterEval_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitEval_input(this);
		}
	}

	public final Eval_inputContext eval_input() throws RecognitionException {
		Eval_inputContext _localctx = new Eval_inputContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eval_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			testlist();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(190);
				match(NEWLINE);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(196);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(PythonParser.AT, 0); }
		public Dotted_nameContext dotted_name() {
			return getRuleContext(Dotted_nameContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public TerminalNode LPAR() { return getToken(PythonParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(PythonParser.RPAR, 0); }
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitDecorator(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decorator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(AT);
			setState(199);
			dotted_name();
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(200);
				match(LPAR);
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9135222840L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 14339L) != 0)) {
					{
					setState(201);
					arglist();
					}
				}

				setState(204);
				match(RPAR);
				}
			}

			setState(207);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorsContext extends ParserRuleContext {
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public DecoratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterDecorators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitDecorators(this);
		}
	}

	public final DecoratorsContext decorators() throws RecognitionException {
		DecoratorsContext _localctx = new DecoratorsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decorators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(209);
				decorator();
				}
				}
				setState(212); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratedContext extends ParserRuleContext {
		public DecoratorsContext decorators() {
			return getRuleContext(DecoratorsContext.class,0);
		}
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public DecoratedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorated; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterDecorated(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitDecorated(this);
		}
	}

	public final DecoratedContext decorated() throws RecognitionException {
		DecoratedContext _localctx = new DecoratedContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decorated);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			decorators();
			setState(217);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				{
				setState(215);
				classdef();
				}
				break;
			case DEF:
				{
				setState(216);
				funcdef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
